--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <section id="home">
             <h2>Objetivos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est perspiciatis minus dolores sapiente vero dignissimos dolor quos? Quas maxime incidunt, nam doloribus reprehenderit tempore numquam dolorum quisquam cumque obcaecati eaque.</p>
+            <p>Em suma, temos como objetivo o aumento da praticidade no ambito de produções de bebidas, sejam elas alcoólicas ou não alcoólicas. Onde nosso equipamento facilitaria o manejo para uma melhor rentabilidade do produtor sendo eles donos de um restaurantes, donos de bares ou até mesmo para consumo individual dentro de suas próprias casas.Onde poderá ser implementado em geladeiras smart junto ao auxílio de seu próprio touch ou via aplicativo bluetooth.</p>
             <picture>
                 <img src="./assets/img/download.jpg" alt="">
                 <img src="./assets/img/download.jpg" alt="">
@@ -46,8 +46,10 @@
             <picture>
                 <img src="./assets/img/pessoa.jpg" alt="">
             </picture>
-            <h2>Publico Alvo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est perspiciatis minus dolores sapiente vero dignissimos dolor quos? Quas maxime incidunt, nam doloribus reprehenderit tempore numquam dolorum quisquam cumque obcaecati eaque.</p>
+            <div class="texto">
+                <h2>Publico Alvo</h2>
+                <p>Nosso Público alvo se consite em geral vendedores de bebidas como bar mens de bares, restaurantes ou eventos públicos. Como também para venda residêncial, para que ambos  possam usufruir de uma maior praticidade.</p>
+            </div>
         </section>
         <section id="equipamentos">
             <h2>Equipamentos</h2>
