atualizando o site lab

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <picture>
                 <img src="./assets/img/Borcelle Podcast Logo.png" alt="logo do nosso projeto que possui duas taças e escrito FLG Bebidas">
             </picture>
-            <div class="home">
+            <div class="navlink"><div class="home">
                 <a href="#home">Home</a>
             </div>
             <div class="publico">
-                <a href="#publico">Publico</a>
+                <a href="#publico">Público</a>
             </div>
             <div class="equipamentos">
                 <a href="#equipamentos">Equipamentos</a>
@@ -29,6 +29,7 @@
             </div>
             <div class="links">
                 <a href="#links">Links</a>
+            </div>
             </div>
         </div>
     </nav>
@@ -53,22 +54,43 @@
         </section>
         <section id="equipamentos">
             <h2>Equipamentos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est perspiciatis minus dolores sapiente vero dignissimos dolor quos? Quas maxime incidunt, nam doloribus reprehenderit tempore numquam dolorum quisquam cumque obcaecati eaque.</p>
-            <picture>
-                <img src="./assets/img/download.jpg" alt="">
-                <img src="./assets/img/download.jpg" alt="">
-                <img src="./assets/img/download.jpg" alt="">
-                <img src="./assets/img/download.jpg" alt="">
-                <img src="./assets/img/download.jpg" alt="">
-                <img src="./assets/img/download.jpg" alt="">
-                <img src="./assets/img/download.jpg" alt="">
-                <img src="./assets/img/download.jpg" alt="">
-                <img src="./assets/img/download.jpg" alt="">
-                <img src="./assets/img/download.jpg" alt="">
-                <img src="./assets/img/download.jpg" alt="">
-                <img src="./assets/img/download.jpg" alt="">
-            </picture>
-        </section>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, eius? Nobis nihil architecto sit expedita rem exercitationem similique sunt amet, suscipit inventore illum voluptates. Vero ullam eligendi doloremque molestias soluta.</p>
+            <div class="carossel-Container">
+              <div class="btnCarossel BtnBack disable">
+                <span id="seta"></span>
+              </div>
+              <div class="carossel-Slide">
+                <div class="item">1</div>
+                <div class="item">2</div>
+                <div class="item">3</div>
+                <div class="item">4</div>
+                <div class="item">5</div>
+                <div class="item">6</div>
+                <div class="item">7</div>
+                <div class="item">8</div>
+                <div class="item">9</div>
+                <div class="item">10</div>
+                <div class="item">11</div>
+                <div class="item">12</div>
+                <div class="item">13</div>
+                <div class="item">14</div>
+                <div class="item">15</div>
+                <div class="item">16</div>
+                <div class="item">17</div>
+                <div class="item">18</div>
+                <div class="item">19</div>
+                <div class="item">20</div>
+                <div class="item">21</div>
+                <div class="item">22</div>
+                <div class="item">23</div>
+                <div class="item">24</div>
+                <div class="item">25</div>
+              </div>
+              <div class="btnCarossel BtnNext">
+                <span id="seta"></span>
+              </div>
+            </div>
+          </section>
         <section id="funcionamento">
             <h2>Funcionamento</h2>
             <div class="first">
@@ -76,30 +98,34 @@
                 <picture>
                     <img src="./assets/img/pessoa.jpg" alt="">
                 </picture>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sit suscipit error eum sint, eligendi maiores officiis minima molestiae neque sed at. Voluptate maxime officiis esse voluptatum, eius dolorem sapiente.</p>
+                <p>Passo 1: Baixe o nosso aplicativo FLG Bebidas, e em seguida conecte-o no bluetooth de nossa coqueteleira, para analisar todas as possibilidades de bebidas que você pode escolher para beber.
+                </p>
             </div>
             <div class="second">
                 <h3>2</h3>
                 <picture>
                     <img src="./assets/img/pessoa.jpg" alt="">
                 </picture>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sit suscipit error eum sint, eligendi maiores officiis minima molestiae neque sed at. Voluptate maxime officiis esse voluptatum, eius dolorem sapiente.</p>
+                <p>Passo 2: Em seguida, selecione a bebida desejada, ou até mesmo, efetue uma mistura de 2 bebidas diferentes, para que você possa degustar da forma em que achar melhor.
+                </p>
             </div>
             <div class="third">
                 <h3>3</h3>
                 <picture>
                     <img src="./assets/img/pessoa.jpg" alt="">
                 </picture>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sit suscipit error eum sint, eligendi maiores officiis minima molestiae neque sed at. Voluptate maxime officiis esse voluptatum, eius dolorem sapiente.</p>
+                <p>
+                    Passo 3: Ao escolher a bebida e ela já ter caido no copo, diriga-se até a máquina para poder retirar o seu copo, e se saborear com a bebida.
+                    </p>
             </div>
         </section>
         <section id="links">
             <h2>Links</h2>
-            <li><a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a></li>
-            <li><a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a></li>
-            <li><a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a></li>
-            <li><a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a></li>
-            <li><a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a></li>
+            <a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a>
+            <a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a>
+            <a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a>
+            <a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a>
+            <a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a>
         </section>
         <section id="integrantes">
             <picture>
@@ -109,5 +135,6 @@
             </picture>
         </section>
     </main>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
