vc.n.tem.nd-commit2-house

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
         </section>
         <section id="equipamentos">
             <h2>Equipamentos</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, eius? Nobis nihil architecto sit expedita rem exercitationem similique sunt amet, suscipit inventore illum voluptates. Vero ullam eligendi doloremque molestias soluta.</p>
+            <p>Acrílico: Base e infraestrutura do projeto;
+            Arduino: Ele atua como o cérebro do nosso projeto, aonde foram feitas diversas conexões com jumpers para a transmissão do código para toda a nossa coqueteleira;
+            Jumpers: São usados para realizar conexões elétricas com o objetivo de ativar, regular ou desativar funções específicas do sistema que não são acessíveis via software;
+            Fonte Colméia: Serve para transmitir energia elétrica ao nosso projeto, para que o arduino funcione e execute suas funções; Placa de Ensaio: Uma adição de espaços para conexão de fios/jumpers, pois o arduino não possui espaço suficiente para certas ações; 8 Mangueiras de Silicone: Utilizada para a transmissão das bebidas, das garrasfas até o copo;8 Mini Bombas de Água: Sugam as bebidas com mais intensidade, para que possam ir em direção ao copo com mais rapidez; Módulo Bluetooth: Será colocado em nossa coqueteleira, e serve para que o bluetooth do nosso aplicativo mobile seja conectado em nossa coqueteleira; 8 Módulos Relé: Serve para quando uma corrente circula, ele gera um campo eletromagnético que acaba atraindo uma série de contatos, estes contato fecham ou abrem os circuitos;
+            10 Capacitadores Cerâmicos: São dispositivos utilizados para o armazenamento de cargas elétricas, principalmente para frequências elevadas;
+            Fiação: Conectar as bombas ao arduino.</p>
             <div class="carossel-Container">
               <div class="btnCarossel BtnBack disable">
                 <span id="seta"></span>
@@ -104,16 +109,17 @@
         <section id="links">
             <h2>Links</h2>
             <a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a>
-            <a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a>
-            <a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a>
-            <a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a>
-            <a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a>
+            <a href="https://produto.mercadolivre.com.br/MLB-1867394085-modulo-bluetooth-hc-05-_JM">https://produto.mercadolivre.com.br/MLB-1867394085-modulo-bluetooth-hc-05-_JM</a>
+            <a href="https://produto.mercadolivre.com.br/MLB-1297963804-10-x-capacitor-cermico-multicamada-1uf-x-50v-1mf-a-granel-_JM">https://produto.mercadolivre.com.br/MLB-1297963804-10-x-capacitor-cermico-multicamada-1uf-x-50v-1mf-a-granel-_JM</a>
+            <a href="https://produto.mercadolivre.com.br/MLB-1237599866-modulo-rele-arduino-8-canais-5v-10a-picautomoco-residenci-_JM">https://produto.mercadolivre.com.br/MLB-1237599866-modulo-rele-arduino-8-canais-5v-10a-picautomoco-residenci-_JM</a>
+            <a href="https://produto.mercadolivre.com.br/MLB-1821443392-fonte-colmeia-12v-10a-120w-bivolt-plug-p4-machofmea-_JM">https://produto.mercadolivre.com.br/MLB-1821443392-fonte-colmeia-12v-10a-120w-bivolt-plug-p4-machofmea-_JM</a>
+            <a href="https://shopee.com.br/product/330080478/13554716751?smtt=0.604680803-1661992046.3">https://shopee.com.br/product/330080478/13554716751?smtt=0.604680803-1661992046.3</a>
         </section>
         <section id="integrantes">
             <picture>
-                <img src="./assets/img/pessoa.jpg" alt="">
-                <img src="./assets/img/pessoa.jpg" alt="">
-                <img src="./assets/img/pessoa.jpg" alt="">
+                <img src="./assets/img/catadordemanga.jpg" alt="">
+                <img src="./assets/img/rc.jpg" alt="">
+                <img src="./assets/img/vc.n.tem.nd.jpg" alt="">
             </picture>
         </section>
     </main>
