--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>FLG Bebidas</title>
 </head>
 <body>
-    <nav>
-        
+
+    <nav>    
         <div class="navbar">
             <picture>
                 <img src="./assets/img/Borcelle Podcast Logo.png" alt="logo do nosso projeto que possui duas taças e escrito FLG Bebidas">
@@ -21,7 +21,7 @@
             <div class="publico">
                 <a href="#publico">Público</a>
             </div>
-            <div class="equipamentos">
+                 <div class="equipamentos">
                 <a href="#equipamentos">Equipamentos</a>
             </div>
             <div class="funcionamento">
@@ -33,6 +33,7 @@
             </div>
         </div>
     </nav>
+
     <main>
         <section id="home">
             <h2>Objetivos</h2>
@@ -45,7 +46,7 @@
         </section>
         <section id="publico">
             <picture>
-                <img src="./assets/img/pessoa.jpg" alt="">
+                <img src="./assets/img/bartender.jpg" alt="">
             </picture>
             <div class="texto">
                 <h2>Publico Alvo</h2>
@@ -72,6 +73,7 @@
                 <div class="item"><img src="./assets/img/jumper.jpg" alt="arduino"></div>
                 <div class="item"><img src="./assets/img/modulorele.jpg" alt="arduino"></div>
                 <div class="item"><img src="./assets/img/placadeensaio.jpg" alt="arduino"></div>
+                <div class="item"><img src="./assets/img/bomba.jpg" alt="arduino"></div>
               </div>
               <div class="btnCarossel BtnNext">
                 <span id="seta"></span>
@@ -117,9 +119,18 @@
         </section>
         <section id="integrantes">
             <picture>
-                <img src="./assets/img/catadordemanga.jpg" alt="">
-                <img src="./assets/img/rc.jpg" alt="">
-                <img src="./assets/img/vc.n.tem.nd.jpg" alt="">
+                <div id="foto"><img src="./assets/img/catadordemanga.jpg">
+                    <div id="comentario">Fernando</div>
+                    <div id="comentario">Financeiro e programação</div>
+              </div>
+                <div id="foto"><img src="./assets/img/rc.jpg">
+                    <div id="comentario">Leonardo</div>
+                    <div id="comentario">Financeiro e programação</div>
+              </div>
+                <div id="foto"><img src="./assets/img/vc.n.tem.nd.jpg">
+                    <div id="comentario">Gustavo B.</div>
+                    <div id="comentario">Financeiro e Parte fisica</div>
+                </div>
             </picture>
         </section>
     </main>
