--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </section>
         <section id="integrantes">
             <picture>
-                <div id="foto"><img src="./assets/img/catadordemanga.jpg">
+                <div class="foto-fernando"id="foto"><img src="./assets/img/catadordemanga.jpg">
                     <div id="comentario">Fernando</div>
                     <div id="comentario">Financeiro e programação</div>
               </div>
