--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +23,7 @@
             </div>
                  <div class="equipamentos">
                 <a href="#equipamentos">Equipamentos</a>
-            </div>
+                 </div> 
             <div class="funcionamento">
                 <a href="#funcionamento">Funcionamento</a>
             </div>
@@ -38,11 +38,6 @@
         <section id="home">
             <h2>Objetivos</h2>
             <p>Em suma, temos como objetivo o aumento da praticidade no ambito de produções de bebidas, sejam elas alcoólicas ou não alcoólicas. Onde nosso equipamento facilitaria o manejo para uma melhor rentabilidade do produtor sendo eles donos de um restaurantes, donos de bares ou até mesmo para consumo individual dentro de suas próprias casas.Onde poderá ser implementado em geladeiras smart junto ao auxílio de seu próprio touch ou via aplicativo bluetooth.</p>
-            <picture>
-                <img src="./assets/img/download.jpg" alt="">
-                <img src="./assets/img/download.jpg" alt="">
-                <img src="./assets/img/download.jpg" alt="">
-            </picture>
         </section>
         <section id="publico">
             <picture>
@@ -55,25 +50,19 @@
         </section>
         <section id="equipamentos">
             <h2>Equipamentos</h2>
-            <p>Acrílico: Base e infraestrutura do projeto;
-            Arduino: Ele atua como o cérebro do nosso projeto, aonde foram feitas diversas conexões com jumpers para a transmissão do código para toda a nossa coqueteleira;
-            Jumpers: São usados para realizar conexões elétricas com o objetivo de ativar, regular ou desativar funções específicas do sistema que não são acessíveis via software;
-            Fonte Colméia: Serve para transmitir energia elétrica ao nosso projeto, para que o arduino funcione e execute suas funções; Placa de Ensaio: Uma adição de espaços para conexão de fios/jumpers, pois o arduino não possui espaço suficiente para certas ações; 8 Mangueiras de Silicone: Utilizada para a transmissão das bebidas, das garrasfas até o copo;8 Mini Bombas de Água: Sugam as bebidas com mais intensidade, para que possam ir em direção ao copo com mais rapidez; Módulo Bluetooth: Será colocado em nossa coqueteleira, e serve para que o bluetooth do nosso aplicativo mobile seja conectado em nossa coqueteleira; 8 Módulos Relé: Serve para quando uma corrente circula, ele gera um campo eletromagnético que acaba atraindo uma série de contatos, estes contato fecham ou abrem os circuitos;
-            10 Capacitadores Cerâmicos: São dispositivos utilizados para o armazenamento de cargas elétricas, principalmente para frequências elevadas;
-            Fiação: Conectar as bombas ao arduino.</p>
             <div class="carossel-Container">
               <div class="btnCarossel BtnBack disable">
                 <span id="seta"></span>
               </div>
               <div class="carossel-Slide">
-                <div class="item"><img src="./assets/img/arduinouno.jpg" alt="arduino"></div>
-                <div class="item"><img src="./assets/img/bluetooth.jpg" alt="arduino"></div>
-                <div class="item"><img src="./assets/img/capacitador (1).jpg" alt="arduino"></div>
-                <div class="item"><img src="./assets/img/fonte-colmeia.jpg" alt="arduino"></div>
-                <div class="item"><img src="./assets/img/jumper.jpg" alt="arduino"></div>
-                <div class="item"><img src="./assets/img/modulorele.jpg" alt="arduino"></div>
-                <div class="item"><img src="./assets/img/placadeensaio.jpg" alt="arduino"></div>
-                <div class="item"><img src="./assets/img/bomba.jpg" alt="arduino"></div>
+                <div class="item"><img src="./assets/img/arduinouno.jpg" alt="arduino" title="Arduino: Ele atua como o cérebro do nosso projeto, aonde foram feitas diversas conexões com jumpers para a transmissão do código para toda a nossa coqueteleira"></div>
+                <div class="item"><img src="./assets/img/bluetooth.jpg" alt="arduino" title="Módulo Bluetooth: Será colocado em nossa coqueteleira, e serve para que o bluetooth do nosso aplicativo mobile seja conectado em nossa coqueteleira"></div>
+                <div class="item"><img src="./assets/img/capacitador (1).jpg" alt="arduino" title=" 10 Capacitadores Cerâmicos: São dispositivos utilizados para o armazenamento de cargas elétricas, principalmente para frequências elevadas"></div>
+                <div class="item"><img src="./assets/img/fonte-colmeia.jpg" alt="arduino" title="Fonte Colméia: Serve para transmitir energia elétrica ao nosso projeto, para que o arduino funcione e execute suas funções"></div>
+                <div class="item"><img src="./assets/img/jumper.jpg" alt="arduino" title="Jumpers: São usados para realizar conexões elétricas com o objetivo de ativar, regular ou desativar funções específicas do sistema que não são acessíveis via software"></div>
+                <div class="item"><img src="./assets/img/modulorele.jpg" alt="arduino" title="Módulos Relé: Serve para quando uma corrente circula, ele gera um campo eletromagnético que acaba atraindo uma série de contatos, estes contato fecham ou abrem os circuitos"></div>
+                <div class="item"><img src="./assets/img/placadeensaio.jpg" alt="arduino" title="Placa de Ensaio: Uma adição de espaços para conexão de fios/jumpers, pois o arduino não possui espaço suficiente para certas ações"></div>
+                <div class="item"><img src="./assets/img/bomba.jpg" alt="arduino" title="8 Mini Bombas de Água: Sugam as bebidas com mais intensidade, para que possam ir em direção ao copo com mais rapidez"></div>
               </div>
               <div class="btnCarossel BtnNext">
                 <span id="seta"></span>
@@ -119,7 +108,7 @@
         </section>
         <section id="integrantes">
             <picture>
-                <div id="foto"><img src="./assets/img/catadordemanga.jpg">
+                <div class="foto-fernando"id="foto"><img src="./assets/img/catadordemanga.jpg">
                     <div id="comentario">Fernando</div>
                     <div id="comentario">Financeiro e programação</div>
               </div>
