Ultimo commit- site pronto/mobile

--- a/SiteTcc-main/index.html
+++ b/SiteTcc-main/index.html
@@ -11,11 +11,16 @@
 <body>
 
     <nav>    
-        <div class="navbar">
+        <div class="navbar" id="navbar">
             <picture>
                 <img src="./assets/img/Borcelle Podcast Logo.png" alt="logo do nosso projeto que possui duas taças e escrito FLG Bebidas">
             </picture>
-            <div class="navlink"><div class="home">
+            <div class="navlink" id="navlink">
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <div class="home">
                 <a href="#home">Home</a>
             </div>
             <div class="publico">
@@ -49,7 +54,9 @@
             </div>
         </section>
         <section id="equipamentos">
-            <h2>Equipamentos</h2>
+            <div class="texto1">
+                <h2>Equipamentos</h2>
+            </div>
             <div class="carossel-Container">
               <div class="btnCarossel BtnBack disable">
                 <span id="seta"></span>
