--- a/index.html
+++ b/index.html
@@ -9,18 +9,12 @@
     <title>FLG Bebidas</title>
 </head>
 <body>
-
     <nav>    
         <div class="navbar" id="navbar">
             <picture>
                 <img src="./assets/img/Borcelle Podcast Logo.png" alt="logo do nosso projeto que possui duas taças e escrito FLG Bebidas">
             </picture>
-            <div class="navlink" id="navlink">
-                <input type="checkbox" />
-                <span></span>
-                <span></span>
-                <span></span>
-                <div class="home">
+            <div class="home">
                 <a href="#home">Home</a>
             </div>
             <div class="publico">
@@ -38,80 +32,83 @@
             </div>
         </div>
     </nav>
-
     <main>
         <section id="home">
             <h2>Objetivos</h2>
-            <p>Em suma, temos como objetivo o aumento da praticidade no ambito de produções de bebidas, sejam elas alcoólicas ou não alcoólicas. Onde nosso equipamento facilitaria o manejo para uma melhor rentabilidade do produtor sendo eles donos de um restaurantes, donos de bares ou até mesmo para consumo individual dentro de suas próprias casas.Onde poderá ser implementado em geladeiras smart junto ao auxílio de seu próprio touch ou via aplicativo bluetooth.</p>
+            <p>Temos como objetivo o aumento da praticidade na área de produções de bebidas, sejam elas alcoólicas ou não alcoólicas. Onde nosso equipamento facilitaria na velociade de demanda do produtor sendo eles donos de um restaurantes, donos de bares ou até mesmo para consumo individual dentro de suas próprias casas.</p>
+        </section>
+        <section id="funcionamento">
+            <h2>Como Funciona?</h2>
+            <div class="first">
+                <h3>1</h3>
+                <picture>
+                    <img src="./assets/img/pessoa.jpg" alt="">
+                </picture>
+                <p>Baixe o nosso aplicativo FLG Bebidas, e em seguida conecte-o no bluetooth de nossa coqueteleira, então escolha sua bebida.
+                </p>
+            </div>
+            <div class="second">
+                <h3>2</h3>
+                <picture>
+                    <img src="./assets/img/drink2.jpg" alt="">
+                </picture>
+                <p>Já no embalo, selecione a bebida desejada, ou até mesmo, efetue uma mistura de 2 bebidas diferentes, para que você possa degustar da forma em que achar melhor.
+                </p>
+            </div>
+            <div class="third">
+                <h3>3</h3>
+                <picture>
+                    <img  src="./assets/img/drink3.jpg" alt="">
+                </picture>
+                <p>Ao escolher a bebida e ela já ter caido no copo, diriga-se até a máquina para poder retirar o seu copo, e saborear-se com sua bebida.
+                    </p>
+            </div>
         </section>
         <section id="publico">
             <picture>
                 <img src="./assets/img/bartender.jpg" alt="">
             </picture>
             <div class="texto">
-                <h2>Publico Alvo</h2>
+                <h2>Público Alvo</h2>
                 <p>Nosso Público alvo se consite em geral vendedores de bebidas como bar mens de bares, restaurantes ou eventos públicos. Como também para venda residêncial, para que ambos  possam usufruir de uma maior praticidade.</p>
             </div>
         </section>
         <section id="equipamentos">
-            <div class="texto1">
-                <h2>Equipamentos</h2>
-            </div>
-            <div class="carossel-Container">
-              <div class="btnCarossel BtnBack disable">
-                <span id="seta"></span>
-              </div>
-              <div class="carossel-Slide">
-                <div class="item"><img src="./assets/img/arduinouno.jpg" alt="arduino" title="Arduino: Ele atua como o cérebro do nosso projeto, aonde foram feitas diversas conexões com jumpers para a transmissão do código para toda a nossa coqueteleira"></div>
-                <div class="item"><img src="./assets/img/bluetooth.jpg" alt="arduino" title="Módulo Bluetooth: Será colocado em nossa coqueteleira, e serve para que o bluetooth do nosso aplicativo mobile seja conectado em nossa coqueteleira"></div>
-                <div class="item"><img src="./assets/img/capacitador (1).jpg" alt="arduino" title=" 10 Capacitadores Cerâmicos: São dispositivos utilizados para o armazenamento de cargas elétricas, principalmente para frequências elevadas"></div>
-                <div class="item"><img src="./assets/img/fonte-colmeia.jpg" alt="arduino" title="Fonte Colméia: Serve para transmitir energia elétrica ao nosso projeto, para que o arduino funcione e execute suas funções"></div>
-                <div class="item"><img src="./assets/img/jumper.jpg" alt="arduino" title="Jumpers: São usados para realizar conexões elétricas com o objetivo de ativar, regular ou desativar funções específicas do sistema que não são acessíveis via software"></div>
-                <div class="item"><img src="./assets/img/modulorele.jpg" alt="arduino" title="Módulos Relé: Serve para quando uma corrente circula, ele gera um campo eletromagnético que acaba atraindo uma série de contatos, estes contato fecham ou abrem os circuitos"></div>
-                <div class="item"><img src="./assets/img/placadeensaio.jpg" alt="arduino" title="Placa de Ensaio: Uma adição de espaços para conexão de fios/jumpers, pois o arduino não possui espaço suficiente para certas ações"></div>
-                <div class="item"><img src="./assets/img/bomba.jpg" alt="arduino" title="8 Mini Bombas de Água: Sugam as bebidas com mais intensidade, para que possam ir em direção ao copo com mais rapidez"></div>
-              </div>
-              <div class="btnCarossel BtnNext">
-                <span id="seta"></span>
-              </div>
-            </div>
-          </section>
-        <section id="funcionamento">
-            <h2>Funcionamento</h2>
-            <div class="first">
-                <h3>1</h3>
-                <picture>
-                    <img src="./assets/img/pessoa.jpg" alt="">
-                </picture>
-                <p>Passo 1: Baixe o nosso aplicativo FLG Bebidas, e em seguida conecte-o no bluetooth de nossa coqueteleira, para analisar todas as possibilidades de bebidas que você pode escolher para beber.
-                </p>
-            </div>
-            <div class="second">
-                <h3>2</h3>
-                <picture>
-                    <img src="./assets/img/pessoa.jpg" alt="">
-                </picture>
-                <p>Passo 2: Em seguida, selecione a bebida desejada, ou até mesmo, efetue uma mistura de 2 bebidas diferentes, para que você possa degustar da forma em que achar melhor.
-                </p>
-            </div>
-            <div class="third">
-                <h3>3</h3>
-                <picture>
-                    <img src="./assets/img/pessoa.jpg" alt="">
-                </picture>
-                <p>
-                    Passo 3: Ao escolher a bebida e ela já ter caido no copo, diriga-se até a máquina para poder retirar o seu copo, e se saborear com a bebida.
-                    </p>
-            </div>
+                <div class="texto1">
+                    <h2>Equipamentos</h2>
+                </div>
+                    <div id="slider">
+                        <img class="selected" src="./assets/img/arduinouno.jpg" alt="arduino">
+                        <img src="./assets/img/bluetooth.jpg" alt="Módulo Bluetooth">
+                        <img src="./assets/img/fonte-colmeia.jpg" alt="Fonte Colméia">
+                        <img src="./assets/img/jumper.jpg" alt="Jumpers">
+                        <img src="./assets/img/modulorele.jpg" alt="Módulos Relé">
+                        <img src="./assets/img/placadeensaio.jpg"  alt="Placa de Ensaio">
+                        <img src="./assets/img/bomba.jpg" alt="Mini Bombas de Água">
+                    </div>
         </section>
-        <section id="links">
-            <h2>Links</h2>
-            <a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079</a>
-            <a href="https://produto.mercadolivre.com.br/MLB-1867394085-modulo-bluetooth-hc-05-_JM">https://produto.mercadolivre.com.br/MLB-1867394085-modulo-bluetooth-hc-05-_JM</a>
-            <a href="https://produto.mercadolivre.com.br/MLB-1297963804-10-x-capacitor-cermico-multicamada-1uf-x-50v-1mf-a-granel-_JM">https://produto.mercadolivre.com.br/MLB-1297963804-10-x-capacitor-cermico-multicamada-1uf-x-50v-1mf-a-granel-_JM</a>
-            <a href="https://produto.mercadolivre.com.br/MLB-1237599866-modulo-rele-arduino-8-canais-5v-10a-picautomoco-residenci-_JM">https://produto.mercadolivre.com.br/MLB-1237599866-modulo-rele-arduino-8-canais-5v-10a-picautomoco-residenci-_JM</a>
-            <a href="https://produto.mercadolivre.com.br/MLB-1821443392-fonte-colmeia-12v-10a-120w-bivolt-plug-p4-machofmea-_JM">https://produto.mercadolivre.com.br/MLB-1821443392-fonte-colmeia-12v-10a-120w-bivolt-plug-p4-machofmea-_JM</a>
-            <a href="https://shopee.com.br/product/330080478/13554716751?smtt=0.604680803-1661992046.3">https://shopee.com.br/product/330080478/13554716751?smtt=0.604680803-1661992046.3</a>
+        <section class="kk3hrdamanha" id="links">
+            <h2>Encontre os Equipamentos</h2>
+            <li><a href="https://produto.mercadolivre.com.br/MLB-1867394085-modulo-bluetooth-hc-05-_JM">Modulo Bluetooth HC-05 1x</a></li>
+            <li><a href="https://produto.mercadolivre.com.br/MLB-1297963804-10-x-capacitor-cermico-multicamada-1uf-x-50v-1mf-a-granel-_JM">Capacitor Cermico Mlticamada 10x</a></li>
+            <li><a href="https://produto.mercadolivre.com.br/MLB-1237599866-modulo-rele-arduino-8-canais-5v-10a-picautomoco-residenci-_JM">Modulo Rele Arduino 8 Canais 1x</a></li>
+            <li><a href="https://produto.mercadolivre.com.br/MLB-1821443392-fonte-colmeia-12v-10a-120w-bivolt-plug-p4-machofmea-_JM">Fonte Colmeia 1x</a></li>
+            <li><a href="https://shopee.com.br/product/330080478/13554716751?smtt=0.604680803-1661992046.3">Mini Bomba De Água 12v 8x</a></li>
+            <li><a href="https://www.baudaeletronica.com.br/arduino-uno-r3-compativel-cabo-usb-atmega328-smd.html?gclid=CjwKCAjw7eSZBhB8EiwA60kCW0YP
+            yysBqGmF73HT-k4rbilaHBQSs0HxnF1HXktI_DV1_f_lvSbjABoClo4QAvD_BwE">Arduino UNO 1x</a></li>
+            <li><a href="https://www.baudaeletronica.com.br/jumper-premium-40p-x-20cm-macho-macho.html?gclid=CjwKCAjw7eSZBhB8EiwA60kCW2FrXgUajWjJNaQvf
+            IMyXpLo0DEfzH8oQ8uJt3R1t9-vAAKojVIYNRoC0A8QAvD_BwE">Jumpers 10x</a></li>
+            <ul><a href="https://www.baudaeletronica.com.br/jumper-premium-40p-x-20cm-macho-femea.html?gclid=CjwKCAjw7eSZBhB8EiwA60kCW8
+            3w7INWyDW6hCIS3RuLT8w-EfdJ-CF4wzxL1uEBQp76iAAMOz9NEBoCafgQAvD_BwE">Jumpers Macho/Femea 10x</a></ul>
+            <ul><a href="https://www.baudaeletronica.com.br/protoboard-400-pontos.html?gclid=CjwKCAjw7eSZBhB8EiwA60kCWz0Jakjvdnl-Day0b7
+            N-YY-9TEpqL54wwYbRGz9KhUQw-Q3w-hGeOxoCh4oQAvD_BwE">Placa de Ensaio 1x</a></ul>
+            <ul><a href="https://produto.mercadolivre.com.br/MLB-2140549402-10-metros-de-mangueira-de-silicone-4-x-2-_JM#position=6&search_layout=stack&type=item&tracki
+            ng_id=aac76ecf-cdb5-477d-86e3-faba2c69ba9e">Mangueira de Silicone 6m</a></ul>
+            <ul><a href="https://www.eletronicaomega.com/resistores-selecione-o-valor-10-unidades?utm_source=Site&utm_medium=GoogleMerchant&utm_campaign=GoogleMerchant&sku=G
+            55D2WJEU-22k-w&gclid=CjwKCAjw7eSZBhB8EiwA60kCW2sVRgjN8TFdX7Q_S">Resistores 2x</a></ul>
+            <ul><a href="https://www.neosolar.com.br/loja/cabo-solar-lafeber-cable-6mm-vermelho-1-8kv.html?gclid=CjwKCAjw7eSZBhB8EiwA60kCWxTCIZn4IqP60Hg6ELYEhf4
+            QY7m1-blJ_Uqp467bGGHeKUy-w2GS4BoCRDgQAvD_BwE">Fiação Azul e Vermelha 2m</a></ul> 
+            <ul><a href="https://create.arduino.cc/projecthub/Seafox_C/cheap-portable-cocktail-maker-barbot-with-app-4f9079">Outros Materiais</a></ul>
         </section>
         <section id="integrantes">
             <picture>
@@ -123,9 +120,9 @@
                     <div id="comentario">Leonardo</div>
                     <div id="comentario">Financeiro e programação</div>
               </div>
-                <div id="foto"><img src="./assets/img/vc.n.tem.nd.jpg">
+                <div class="ft-borges" id="foto"><img src="./assets/img/Borges.jpg">
                     <div id="comentario">Gustavo B.</div>
-                    <div id="comentario">Financeiro e Parte fisica</div>
+                    <div id="comentario">Financeiro, Parte fisica e programação</div>
                 </div>
             </picture>
         </section>
