--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
             <picture>
                 <img src="./assets/img/Borcelle Podcast Logo.png" alt="logo do nosso projeto que possui duas taças e escrito FLG Bebidas">
             </picture>
-            <div class="home">
+            <div class="navlink" id="navlink">
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <div class="home">
                 <a href="#home">Home</a>
             </div>
             <div class="publico">
